--- a/css/main.css
+++ b/css/main.css
@@ -226,20 +226,27 @@ nav li a:hover {
 	width: 100%;
 	margin: 0 auto;
 	overflow: hidden;
+	display: grid;
+	  grid-template-columns: repeat(2, 1fr);
+	  gap: 2rem; /* adjust spacing as you like */
 }
 
 #grid a {
 	position: relative;
-	width: 100%;
+	/* width: 100%; */
 	height: 40vw;
 	min-height: 400px;
-	float: left;
-	overflow: hidden;
+	/* float: left;
+	overflow: hidden; */
 	border-radius: 30px;
 }
 
-#grid a:first-child {
+/* #grid a:first-child {
 	height: 70vh;
+} */
+
+#grid > a:nth-child(odd) {
+  grid-column: 1 / -1; /* make odd-numbered items span the full width */
 }
 
 #grid a .images {
